# face_recognition

./: .env  .gitignore  README.md  build.sh  pyproject.toml  register.py  requirements.txt  schema.prisma  verify.py  verify_deepface.py
app/: __init__.py  config.py  database.py  main.py  models.py  routes.py  service.py
app/static/: index.html
